--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@modules/mixpanel-analytics": "file:./modules/mixpanel-analytics/",
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/photo-editing": "file:./modules/photo-editing/",
+    "@modules/privacy-policy-webview": "file:./modules/privacy-policy-webview/",
     "@modules/side-drawer": "file:./modules/side-drawer/",
     "@modules/social-login": "file:./modules/social-login/",
     "@modules/user-profile": "file:./modules/user-profile/",
@@ -59,6 +60,7 @@
     "react-native-unimodules": "0.13.3",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.10",
+    "react-native-webview": "11.23.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   },
