--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -41,3 +41,4 @@ cb-django-core = {editable = true, path = "./modules/django_core"}
 cb-django-disqus = {editable = true, path = "./modules/django_disqus"}
 cb-django-openai = {editable = true, path = "./modules/django_openai"}
 cb-django-ocr = {editable = true, path = "./modules/django_ocr"}
+cb-django-typeform-webhook = {editable = true, path = "./modules/django_typeform_webhook"}
