--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -42,3 +42,4 @@ cb-django-disqus = {editable = true, path = "./modules/django_disqus"}
 cb-django-openai = {editable = true, path = "./modules/django_openai"}
 cb-django-ocr = {editable = true, path = "./modules/django_ocr"}
 cb-django-typeform-webhook = {editable = true, path = "./modules/django_typeform_webhook"}
+cb-terms-and-conditions = {editable = true, path = "./modules/terms_and_conditions"}
