--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@modules/qr-code": "file:./modules/qr-code/",
     "@modules/side-drawer": "file:./modules/side-drawer/",
     "@modules/social-login": "file:./modules/social-login/",
+    "@modules/terms-and-conditions": "file:./modules/terms-and-conditions",
     "@modules/user-profile": "file:./modules/user-profile/",
     "@react-native-camera-roll/camera-roll": "5.0.2",
     "@react-native-community/cameraroll": "4.1.2",
